# weather

./: .gitignore  LICENSE  README.md  Weather Bot Description.md  aviationweather_gov_openapi.yaml  main.py  pyproject.toml  weather.sqlite3
.ai/tasks/: weather-bot.md
bmad-agent/: ide-bmad-orchestrator.cfg.md  web-bmad-orchestrator-agent.cfg.md
bmad-agent/checklists/: architect-checklist.md  frontend-architecture-checklist.md  pm-checklist.md  po-master-checklist.md
bmad-agent/data/: technical-preferences.txt
bmad-agent/personas/: analyst.md  architect.md  design-architect.md  dev.ide.md  pm.md  po.md  qamanual.md  sm.ide.md  sm.md  support.md  technical-writer.md
bmad-agent/tasks/: create-bug-report.md  create-jira-task.md  generate-mr-description.md  generate-test-cases.md  investigate-user-issue.md
bmad-agent/templates/: mr-description-tmpl.md
bot/: __init__.py  api.py  chart.py  cli.py  db.py  parser.py  report.py  taf_summary.py  telegram.py
bot/templates/: report_template.txt
